# Beacon

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  Cargo.toml  README.md  deny.toml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  typos.toml
.claude/skills/add-backend-route/: SKILL.md
.claude/skills/run-gates/: SKILL.md
.claude/skills/standardize-cleanup/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
analyzer/: normalize.js
apps/analyzer/: Dockerfile  normalize.js  package-lock.json  package.json  server.js
apps/backend/: Cargo.toml  Dockerfile
apps/backend/migrations/: 20260615000001_create_users.sql  20260615000002_create_sessions.sql  20260615000004_create_project_members.sql  20260615000006_create_versions.sql  20260615000007_create_gallery_images.sql  20260615000008_add_visibility_and_icon.sql  20260615000010_project_status_and_review.sql  20260615000013_create_hearts_and_saves.sql  20260615000014_publish_snapshot.sql  20260615000015_create_moderator_notes.sql  (+1 more)
apps/frontend/: .dockerignore  Dockerfile  components.json  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260615000003_create_projects.sql  20260615000005_create_categories.sql  20260615000009_add_monetization.sql  20260615000011_add_project_links.sql  20260615000012_create_project_daily_stats.sql
backend/src/: analyzer.rs  config.rs  error.rs  extract.rs  main.rs  pack.rs  password.rs  session.rs  state.rs  storage.rs  utils.rs
backend/src/routes/: access.rs  categories.rs  gallery.rs  health.rs  mod.rs  moderation.rs  owner.rs  projects.rs  sql.rs  versions.rs
backend/src/routes/auth/: discord.rs  github.rs  login.rs  mod.rs  oauth.rs  register.rs  session.rs
backend/src/routes/gallery/: create.rs  delete.rs  list.rs  mod.rs  serve.rs
backend/src/routes/projects/: create.rs  detail.rs  icon.rs  interactions.rs  list.rs  members.rs  mod.rs  settings.rs  submit.rs  update.rs
backend/src/routes/versions/: create.rs  delete.rs  download.rs  file.rs  list.rs  mod.rs
deploy/: Caddyfile
frontend/: eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
scripts/: gen-licenses.mjs
(+302 files in other folders)
