[package]
name = "beacon-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate"] }
time = { version = "0.3.49", default-features = false }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.7.0", features = ["cors"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2.1.3"
