[package]
name = "beacon-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
reqwest = {
  version = "0.12.28",
  default-features = false,
  features = ["json", "rustls-tls"]
}
rust-s3 = {
  version = "0.37.2",
  default-features = false,
  features = ["tokio-rustls-tls"]
}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = {
  version = "0.9.0",
  default-features = false,
  features = ["macros", "migrate", "postgres", "runtime-tokio", "tls-rustls"]
}
time = { version = "0.3.49", default-features = false }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
urlencoding = "2.1.3"

[lints]
workspace = true
